--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
     <div class="container">
         <div class="flex" onclick="revealCard()">
             <img src="./Screenshot 2024-04-23 204546.png" alt="">
-            <button type="button" style="height: 400px; width: 400px;"><h1>"Unlock the significance of _28th may_, a day filled with special importance, by clicking here.👈"</h1></button><br><br><br><br>
+            <button type="button" style="height: 400px; width: 400px;"><h1>"Unlock the significance of 28th may, a day filled with special importance, by clicking here.👈"</h1></button><br><br><br><br>
             <img style="margin-left:50;" src="./bbb.png" alt="">
         </div>
         <div class="card" id="birthdayCard">
-            <h1>It's <i>_my Best Brother's</i> Birthday!</h1>
+            <h1>It's <i> my Best Brother's</i> Birthday!</h1>
             <img style="height: 600px; width: 500px;" src="./hapy.jpg" alt="">
             <p><h3>"Sending the most heartfelt birthday wishes from your sister, may your special day be adorned with joy, laughter, and countless cherished moments."</h3></p><br><br><br>
             <p style="text-decoration-color: pink; background-color: pink;"><h6>made by amruta</h6></p>
